--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
 env:
   SERVER_USERNAME: ubuntu
   SERVER_IP: 3.79.247.6
-  SSH_PRIVATE_KEY: ${{ secrets.SSH_PUB_KEY }}
+  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
 jobs:
   build_deploy:
@@ -22,7 +22,7 @@ jobs:
         with:
           host: ${{ env.SERVER_IP }}
           username: ${{ env.SERVER_USERNAME }}
-          key: ${{ env.SSH_PUB_KEY }}
+          key: ${{ env.SSH_PRIVATE_KEY }}
           script: |
             if [ ! -d "cicd" ]; then
               mkdir -p cicd
