--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,13 +30,16 @@ jobs:
             if [ ! -d "~/94_matrix" ]; then
               echo "Directory ~/94_matrix does not exist. Cloning repository..."
               git clone https://github.com/D1Y0RBEKORIFJONOV/94_matrix.git ~/94_matrix
+            else
+              echo "Directory ~/94_matrix already exists. Updating repository..."
+              cd ~/94_matrix
+              git pull origin main
             fi
             cd ~/94_matrix
             if [ ! -f "docker-compose.yaml" ]; then
               echo "docker-compose.yaml not found in $(pwd)"
               exit 1
             fi
-            git pull origin main
             docker-compose down
             docker-compose build
             docker-compose up -d
