--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,14 +35,13 @@ jobs:
               git clone https://github.com/D1Y0RBEKORIFJONOV/94_matrix.git "$TARGET_DIR"
               echo "Repository cloned."
             else
-              echo "Directory $TARGET_DIR exists. Pulling latest changes..."
+              echo "Directory $TARGET_DIR exists. Changing to target directory..."
               cd "$TARGET_DIR" || { echo "Failed to change directory to $TARGET_DIR"; exit 1; }
+              echo "Pulling latest changes..."
               git pull origin main || { echo "Failed to pull latest changes from git"; exit 1; }
               echo "Latest changes pulled."
             fi
 
-            echo "Changing to target directory..."
-            cd "$TARGET_DIR" || { echo "Failed to change directory to $TARGET_DIR"; exit 1; }
             echo "Current directory: $(pwd)"
             echo "Directory contents:"
             ls -l
@@ -59,5 +58,3 @@ jobs:
             echo "Building and starting containers..."
             docker-compose up --build -d || { echo "Failed to build and start containers"; exit 1; }
             echo "Containers built and started."
-          script_stop: true
-          timeout: 200s
