--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,16 +19,20 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ env.SERVER_IP }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
+          chmod 644 ~/.ssh/id_rsa.pub
+          ssh-keyscan -H ${{ env.SERVER_IP }} >> ~/.ssh/authorized_keys
+
+      - name: Verify SSH connection
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa.pub ${{ env.SERVER_USERNAME }}@${{ env.SERVER_IP }} 'echo "SSH connection successful!"'
 
       - name: Deploy image to server
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ env.SERVER_IP }}
           username: ${{ env.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PUBLIC_KEY }}
           script: |
             set -e
             TARGET_DIR=~/94_matrix
@@ -53,6 +57,12 @@ jobs:
               echo "docker-compose.yaml not found in $(pwd)"
               exit 1
             fi
+
+            echo "Checking Docker installation..."
+            docker --version || { echo "Docker not installed"; exit 1; }
+
+            echo "Checking Docker Compose installation..."
+            docker-compose --version || { echo "Docker Compose not installed"; exit 1; }
 
             echo "Stopping existing containers..."
             docker-compose down || { echo "Failed to stop existing containers"; exit 1; }
